# opengl-stuffs-uwu

./: Cargo.toml  Renderdoc settings.cap
opengl/: Cargo.toml  build.rs
opengl/src/: lib.rs
resources/shaders/: fragment.frag  light_vx.vert  vertex.vert
src/: buffers.rs  camera.rs  main.rs  shaders.rs  textures.rs
