[package]
name = "opengl-stuffs-uwu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.50.0"
opengl = { path = "./opengl" }
image = { version = "0.24.5", default-features = false, features = [ "jpeg" ] }
# image = { version = "whatever", default-features = false, features = [ "jpeg" ] }

[workspace]
members = [
    "opengl",
    ".",
]